@@ -3,7 +3,9 @@ $Date$
 VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-27 (opened September 1, 2009)
-
+	
+	* predict.rda: failed when rda was based on correlations (scale =
+	TRUE), and there were missing data (0/0 division in scaling).
 
 	* cca & rda: New way of handling na.action. Function ordiNAexclude
 	adds items CCA$wa.excluded or CA$u.excluded for NA rows into
